[project]
name = "asciiquarium-redux"
version = "0.1.0"
description = "A Python port of Asciiquarium with asciimatics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asciimatics>=1.15.0",
]

[project.scripts]
asciiquarium = "asciiquarium_redux.__main__:main"

[tool.uv]
package = true
